/*
 * test_records_grouped_parent_child.proto
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2015-2018 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

package com.apple.foundationdb.record.groupedParentChildProto;

option java_package = "com.apple.foundationdb.record";
option java_outer_classname = "TestRecordsGroupedParentChildProto";

import "record_metadata_options.proto";

message MyParentRecord {
  required int64 group = 1;
  required int64 rec_no = 2;
  optional int64 child_rec_no = 3;
  optional string text_value = 4;
  optional int64 int_value = 5;
  optional int64 timestamp = 6;
}

message MyChildRecord {
  required int64 group = 1;
  required int64 rec_no = 2;
  optional string str_value = 3;
  optional int64 other_value = 4;
}

message UnionDescriptor {
  option (com.apple.foundationdb.record.record).usage = UNION;
  optional MyParentRecord _MyParentRecord = 1;
  optional MyChildRecord _MyChildRecord = 2;
}
